# learner-aware-learning

./: .gitignore  environment.yaml  main.py  pipeline.py  pyproject.toml  qa.py  sam_test.py  summarize.py
Fintech/: Lecture1_clip-2.json
Fintech/MIT_15.S08/: course_summary.json
Fintech/MIT_15.S08/class_01/: class_01.en-j3PyPqV-e1s.vtt  class_01.json  debug_matching.json  slide_timestamps.json  summary.txt
Fintech/MIT_15.S08/class_02/: class_02.en-j3PyPqV-e1s.vtt  class_02.json  debug_matching.json  slide_timestamps.json  summary.txt
Fintech/MIT_15.S08/class_03/: class_03.en-j3PyPqV-e1s.vtt  class_03.json  debug_matching.json  slide_timestamps.json  summary.txt
Fintech/MIT_15.S08/class_04/: class_04.en-j3PyPqV-e1s.vtt  class_04.json  (+3 more)
Fintech/clip1_slides/: slide_timestamps.json
Fintech/clip2_slides/: slide_timestamps.json
SlideExtractionUsingPaddleOCR/: README.md  stem_slide_pdf_extractor.py
SlideExtractionUsingPaddleOCR/outputs/: extraction.json
SlideExtractionUsingPaddleOCR/slide_extractor/: __init__.py  constants.py  io.py  layout.py  ocr.py  pipeline.py  types.py  utils.py
slide_extraction/: extract.py  extract_hist.py  extract_ssim.py  main.py  sam.py  sam_next.py
utils/: time.py
vlm/: extract_text.py  vlm.py
vlm_experiments/: eval.py  llava_inference.py  qwen_inference.py  vllama_inference.py
vlm_results/: baseline_pdf.json  llava_multi-image.json  llava_single-image.json  llava_video.json  qwen_multi-image.json  qwen_single-image.json  qwen_video.json  vllama_multi-image.json  vllama_single-image.json  vlm_evaluation_scores.xlsx
(+123 files in other folders)
