[project]
name = "nlp-project-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.35.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "sam-2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
